fix inline code overflow

--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -185,6 +185,8 @@ hr {
       border-radius: 4px;
       display: inline-block;
       font-weight: bold;
+      word-break: break-all;
+      overflow-wrap: anywhere;
     }
   }
 
